<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="8dp" >

    <EditText
	    android:id="@+id/configeditview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_weight="1.0"
        android:text="@string/nodata"
         
        />
                

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
            >

                <Button
                    android:id="@+id/save"
                    style="?android:attr/buttonStyleSmall"
                    android:onClick="save"
                    android:text="@string/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                />

                <Button
                    android:id="@+id/cancel"
                    style="?android:attr/buttonStyleSmall"
                    android:onClick="cancel"
                    android:text="@string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"                     
                />
            </LinearLayout>

</LinearLayout>